--- a/Exercícios/loteria/index.html
+++ b/Exercícios/loteria/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Selecione a opção:</h1>
     <ul>
-        <li>1 - Quina</li>
-        <li>2 - Lotofácil</li>
-        <li>3 - Sena</li>
+      <li>1 - Quina</li>
+      <li>2 - Lotofácil</li>
+      <li>3 - Sena</li>
     </ul>
     <input type="number" id="numeroInput" placeholder="Digite um número" />
-    <button id="enviarButton">Enviar</button>
+    <button id="enviarButton">Gerar números da sorte</button>
     <h3 id="resultado"></h3>
-</body>
-  <script src="index.js"></script>
+    <script src="index.js"></script>
+  </body>
 </html>
